--- a/templates/security/_menu.html
+++ b/templates/security/_menu.html
@@ -4,11 +4,7 @@
   {%- endif %}
 
   {% if current_user.has_role('admin') -%}
-  <li><a href="{{ url_for('admin.admin_page') }}">Admin</a></li>
-  {% endif -%}
-  
-  {% if current_user.has_role('admin') or current_user.has_role('editor') -%}
-  <li><a href="{{ url_for('admin.admin_or_editor') }}">Admin or Editor</a></li>
+  <li><a href="{{ url_for('admin.admin') }}">Admin</a></li>
   {% endif -%}
   
     {%- if current_user.is_authenticated() -%}
