--- a/templates/base.html
+++ b/templates/base.html
@@ -20,14 +20,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">ExampleApp</a>
+      <a class="navbar-brand" href="{{ url_for('frontend.index') }}">ExampleApp</a>
     </div>
 
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       {% include "security/_menu.html" %}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="{{ url_for('todo.todo') }}">Todo</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
