--- a/static/css/todo.css
+++ b/static/css/todo.css
@@ -2,8 +2,10 @@
     border: 1px solid rgb(212,212,212);
     width: 800px; 
     height: 400px;
+    margin-bottom: 1em;
 }
 
 .rightAlign {
     text-align:right;
 }
+
