--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 
 {% block scripts %}
   {{super()}}
-    {% assets filters="rjsmin", output="gen/packed.js", "js/angular-1.2.20.min.js", "js/angular-resource-1.2.20.min.js", "js/ui-bootstrap-tpls-0.11.0.min.js", "js/ng-grid-2.0.11.min.js" %}
+    {% assets filters="rjsmin", output="gen/packed.js", "js/angular-1.2.20.min.js", "js/angular-resource-1.2.20.min.js", "js/ui-bootstrap-tpls-0.11.0.js", "js/ng-grid-2.0.11.min.js" %}
           <script src="{{ ASSET_URL }}"></script>
     {% endassets %}
 {% endblock %}
