--- a/templates/todo/index.html
+++ b/templates/todo/index.html
@@ -43,7 +43,7 @@
                             <label class="control-label col-sm-2" for="item">Item</label>
 
                             <div class="col-sm-10">
-                                <input class="form-control" id="item" name="item" type="text" value="">
+                                <input class="form-control" id="item" name="item" type="text" ng-model="todo.item">
                             </div>
                         </div>
                         <div class="form-group">
@@ -52,7 +52,7 @@
                             <div class="col-sm-10">
                                 <p class="input-group">
                                     <input type="text" class="form-control"
-                                           datepicker-popup="{{ '{{format}}' }}" ng-model="dt"
+                                           datepicker-popup="{{ '{{format}}' }}" ng-model="todo.date"
                                            is-open="opened"
                                            datepicker-options="dateOptions"
                                            ng-required="true" close-text="Close"/>
