--- a/templates/todo/index.html
+++ b/templates/todo/index.html
@@ -41,7 +41,7 @@
                             <label class="control-label col-sm-2" for="item">Item</label>
 
                             <div class="col-sm-10">
-                                <input class="form-control" id="item" name="item" type="text" ng-model="todo.item">
+                                <input class="form-control" id="item" name="item" type="text" ng-model="todo.item" xng-focus="{{ '{{isOpen}}' }}">
                             </div>
                         </div>
                         <div class="form-group">
@@ -79,7 +79,7 @@
 
 {% block scripts %}
   {{super()}}
-    {% assets filters="rjsmin", output="gen/todo.js", "js/todo/todoApp.js", "js/todo/todoService.js", "js/todo/todoCtrl.js"%}
+    {% assets filters="rjsmin", output="gen/todo.js", "js/todo/todoApp.js", "js/todo/todoService.js", "js/todo/todoCtrl.js", "js/directive/xng-focus.js" %}
           <script src="{{ ASSET_URL }}"></script>
     {% endassets %}
 {% endblock %}
