--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -1,5 +1,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% import "macros/macros.html" as macros %}
+
 {% extends "security/index.html" %}
 
 {% macro social_login(provider_id, display_name) %}
@@ -18,6 +20,7 @@ Login
     {{ login_user_form.hidden_tag() }}
 
     {{ wtf.form_errors(login_user_form) }}
+    {{ macros.form_errors(login_user_form) }}
 
     {{ wtf.form_field(login_user_form.email) }}
     {{ wtf.form_field(login_user_form.password) }}
