Added List Todos robot tests.

--- a/templates/todo/index.html
+++ b/templates/todo/index.html
@@ -16,6 +16,7 @@
 
 {% block content %}
 <div class="container-fluid" ng-controller="TodoCtrl">
+    <div id="_returned_page" _page="{{ '{{returnedPage}}' }}"></div>
     <div class="row">
         <div class="col-md-7 col-md-offset-1">
             <h1>Todo</h1>
